[package]
name = "short_url"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
axum = "0.7"# Web 框架
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
redis = { version = "0.23", features = ["aio"] }# Redis 客户端
serde = { version = "1.0", features = ["derive"] }
nanoid = "0.4"# 短链 ID 生成
tower = "0.4"# 中间件
tracing = "0.1"# 日志
dotenv = "0.15"# 环境变量
colored = "2.1"#彩色
ansi = "0.3"